--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
         android:theme="@style/Theme.CurriculumVitaeV2"
         tools:targetApi="31">
         <activity
+            android:name=".AddEducationActivity"
+            android:exported="true"
+            android:theme="@style/Theme.NoActionBar"/>
+        <activity
+            android:name=".AddExperienceActivity"
+            android:exported="true"
+            android:theme="@style/Theme.NoActionBar"/>
+        <activity
+            android:name=".CareersActivity"
+            android:exported="true"
+            android:theme="@style/Theme.NoActionBar" />
+        <activity
             android:name=".ResumeActivity"
             android:exported="true"
             android:theme="@style/Theme.NoActionBar" />
